src/generated/antlr/Angular/AngularParser.java
// Generated from C:/Users/Ahmed_Ajajeh/Desktop/university/fourth-year/compiler-project/edited-compiler/src/grammar/AngularParser.g4 by ANTLR 4.13.2

package antlr;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class AngularParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		STYLE=1, CLASS=2, IMPORT=3, FROM=4, EXPORT=5, LET=6, CONST=7, VAR=8, FUNCTION=9, 
		RETURN=10, IF=11, ELSE=12, FOR=13, WHILE=14, OF=15, TYPE=16, INTERFACE=17, 
		CONSTRUCTOR=18, PRIVATE=19, PUBLIC=20, PROTECTED=21, THIS=22, PRINT=23, 
		ABSTRACT=24, ASYNC=25, DEFAULT=26, EXTENDS=27, IMPLEMENTS=28, STATIC=29, 
		READONLY=30, OVERRIDE=31, BOOLEAN=32, INCREMENT=33, DECREMENT=34, LBRACE=35, 
		RBRACE=36, LPAREN=37, RPAREN=38, COLON=39, COMMA=40, DOT=41, BACKTICK=42, 
		SEMI=43, ASSIGN=44, LT=45, GT=46, LEQ=47, GEQ=48, EQ=49, NEQ=50, PLUS=51, 
		MINUS=52, STAR=53, DIV=54, AND=55, OR=56, BINDING_START=57, BINDING_END=58, 
		DOLLAR=59, AT=60, PIPE=61, AMBER=62, QUOTE=63, TWO_WAY_BIND=64, TWO_WAY_END=65, 
		INTERPOLATION=66, COMPONENT=67, SERVICE_DECORATOR=68, TEMPLATEURL=69, 
		STYLEURLS=70, SELECTOR=71, PROVIDEDIN=72, TYPE_STRING=73, TYPE_NUMBER=74, 
		TYPE_BOOLEAN=75, TYPE_ANY=76, ID=77, NUMBER=78, STRING=79, WS=80, COMMENT=81, 
		MULTI_COMMENT=82;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_importStatement = 2, RULE_typeDefinition = 3, 
		RULE_typeAliasDefinition = 4, RULE_interfaceDefinition = 5, RULE_interfaceBody = 6, 
		RULE_typeBody = 7, RULE_variableDeclaration = 8, RULE_varDeclWithType = 9, 
		RULE_varDeclWithInit = 10, RULE_functionDefinition = 11, RULE_functionDecl = 12, 
		RULE_emptyFunctionDecl = 13, RULE_arrowFunction = 14, RULE_emptyArrowFunction = 15, 
		RULE_functionBody = 16, RULE_returnStatement = 17, RULE_functionInvocation = 18, 
		RULE_functionName = 19, RULE_argumentList = 20, RULE_ifStatement = 21, 
		RULE_elseIfBlock = 22, RULE_elseBlock = 23, RULE_loopStatement = 24, RULE_forLoop = 25, 
		RULE_whileLoop = 26, RULE_forInitializer = 27, RULE_forCondition = 28, 
		RULE_forUpdate = 29, RULE_expression = 30, RULE_postfixExpression = 31, 
		RULE_logicalExpression = 32, RULE_arithmeticExpression = 33, RULE_termAction = 34, 
		RULE_term = 35, RULE_factorAction = 36, RULE_factor = 37, RULE_assignmentStatement = 38, 
		RULE_arrayExpression = 39, RULE_objectExpression = 40, RULE_objectProperty = 41, 
		RULE_componentDefinition = 42, RULE_componentDecorator = 43, RULE_componentDecoratorBody = 44, 
		RULE_selector = 45, RULE_templateUrl = 46, RULE_styleurls = 47, RULE_serviceDefinition = 48, 
		RULE_serviceDecorator = 49, RULE_serviceDecoratorBody = 50, RULE_classDefinition = 51, 
		RULE_classBody = 52, RULE_classMember = 53, RULE_constructorDeclaration = 54, 
		RULE_propertyDeclaration = 55, RULE_methodDefinition = 56, RULE_type = 57, 
		RULE_primitiveType = 58, RULE_arrayType = 59, RULE_parameterList = 60, 
		RULE_parameter = 61, RULE_scopeOfStatements = 62, RULE_stringArray = 63;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statement", "importStatement", "typeDefinition", "typeAliasDefinition", 
			"interfaceDefinition", "interfaceBody", "typeBody", "variableDeclaration", 
			"varDeclWithType", "varDeclWithInit", "functionDefinition", "functionDecl", 
			"emptyFunctionDecl", "arrowFunction", "emptyArrowFunction", "functionBody", 
			"returnStatement", "functionInvocation", "functionName", "argumentList", 
			"ifStatement", "elseIfBlock", "elseBlock", "loopStatement", "forLoop", 
			"whileLoop", "forInitializer", "forCondition", "forUpdate", "expression", 
			"postfixExpression", "logicalExpression", "arithmeticExpression", "termAction", 
			"term", "factorAction", "factor", "assignmentStatement", "arrayExpression", 
			"objectExpression", "objectProperty", "componentDefinition", "componentDecorator", 
			"componentDecoratorBody", "selector", "templateUrl", "styleurls", "serviceDefinition", 
			"serviceDecorator", "serviceDecoratorBody", "classDefinition", "classBody", 
			"classMember", "constructorDeclaration", "propertyDeclaration", "methodDefinition", 
			"type", "primitiveType", "arrayType", "parameterList", "parameter", "scopeOfStatements", 
			"stringArray"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'style'", "'class'", "'import'", "'from'", "'export'", "'let'", 
			"'const'", "'var'", "'function'", "'return'", "'if'", "'else'", "'for'", 
			"'while'", "'of'", "'type'", "'interface'", "'constructor'", "'private'", 
			"'public'", "'protected'", "'this'", "'print'", "'abstract'", "'async'", 
			"'default'", "'extends'", "'implements'", "'static'", "'readonly'", "'override'", 
			null, "'++'", "'--'", "'{'", "'}'", "'('", "')'", "':'", "','", "'.'", 
			"'`'", "';'", "'='", "'<'", "'>'", "'<='", "'>='", "'=='", "'!='", "'+'", 
			"'-'", "'*'", "'/'", "'&&'", "'||'", "'['", "']'", "'$'", "'@'", "'|'", 
			"'&'", "'\"'", "'[('", "')]'", null, "'@Component'", "'@Injectable'", 
			"'templateUrl'", "'styleUrls'", "'selector'", "'providedIn'", "'string'", 
			"'number'", "'boolean'", "'any'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "STYLE", "CLASS", "IMPORT", "FROM", "EXPORT", "LET", "CONST", "VAR", 
			"FUNCTION", "RETURN", "IF", "ELSE", "FOR", "WHILE", "OF", "TYPE", "INTERFACE", 
			"CONSTRUCTOR", "PRIVATE", "PUBLIC", "PROTECTED", "THIS", "PRINT", "ABSTRACT", 
			"ASYNC", "DEFAULT", "EXTENDS", "IMPLEMENTS", "STATIC", "READONLY", "OVERRIDE", 
			"BOOLEAN", "INCREMENT", "DECREMENT", "LBRACE", "RBRACE", "LPAREN", "RPAREN", 
			"COLON", "COMMA", "DOT", "BACKTICK", "SEMI", "ASSIGN", "LT", "GT", "LEQ", 
			"GEQ", "EQ", "NEQ", "PLUS", "MINUS", "STAR", "DIV", "AND", "OR", "BINDING_START", 
			"BINDING_END", "DOLLAR", "AT", "PIPE", "AMBER", "QUOTE", "TWO_WAY_BIND", 
			"TWO_WAY_END", "INTERPOLATION", "COMPONENT", "SERVICE_DECORATOR", "TEMPLATEURL", 
			"STYLEURLS", "SELECTOR", "PROVIDEDIN", "TYPE_STRING", "TYPE_NUMBER", 
			"TYPE_BOOLEAN", "TYPE_ANY", "ID", "NUMBER", "STRING", "WS", "COMMENT", 
			"MULTI_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "AngularParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AngularParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					setState(128);
					statement();
					}
					} 
				}
				setState(133);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	 
		public StatementContext() { }
		public void copyFrom(StatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ComponentStmtContext extends StatementContext {
		public ComponentDefinitionContext componentDefinition() {
			return getRuleContext(ComponentDefinitionContext.class,0);
		}
		public ComponentStmtContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterComponentStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitComponentStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitComponentStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ScopeStmtContext extends StatementContext {
		public ScopeOfStatementsContext scopeOfStatements() {
			return getRuleContext(ScopeOfStatementsContext.class,0);
		}
		public ScopeStmtContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterScopeStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitScopeStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitScopeStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FuncDefStmtContext extends StatementContext {
		public FunctionDefinitionContext functionDefinition() {
			return getRuleContext(FunctionDefinitionContext.class,0);
		}
		public FuncDefStmtContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterFuncDefStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitFuncDefStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitFuncDefStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ImportStmtContext extends StatementContext {
		public ImportStatementContext importStatement() {
			return getRuleContext(ImportStatementContext.class,0);
		}
		public ImportStmtContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterImportStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitImportStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitImportStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class IfStmtContext extends StatementContext {
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public IfStmtContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterIfStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitIfStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitIfStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class LoopStmtContext extends StatementContext {
		public LoopStatementContext loopStatement() {
			return getRuleContext(LoopStatementContext.class,0);
		}
		public LoopStmtContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterLoopStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitLoopStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitLoopStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FuncInvokeStmtContext extends StatementContext {
		public FunctionInvocationContext functionInvocation() {
			return getRuleContext(FunctionInvocationContext.class,0);
		}
		public FuncInvokeStmtContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterFuncInvokeStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitFuncInvokeStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitFuncInvokeStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ServiceStmtContext extends StatementContext {
		public ServiceDefinitionContext serviceDefinition() {
			return getRuleContext(ServiceDefinitionContext.class,0);
		}
		public ServiceStmtContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterServiceStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitServiceStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitServiceStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class VarDeclStmtContext extends StatementContext {
		public VariableDeclarationContext variableDeclaration() {
			return getRuleContext(VariableDeclarationContext.class,0);
		}
		public VarDeclStmtContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterVarDeclStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitVarDeclStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitVarDeclStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class AssignStmtContext extends StatementContext {
		public AssignmentStatementContext assignmentStatement() {
			return getRuleContext(AssignmentStatementContext.class,0);
		}
		public AssignStmtContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterAssignStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitAssignStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitAssignStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class TypeDefStmtContext extends StatementContext {
		public TypeDefinitionContext typeDefinition() {
			return getRuleContext(TypeDefinitionContext.class,0);
		}
		public TypeDefStmtContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterTypeDefStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitTypeDefStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitTypeDefStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(145);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				_localctx = new ImportStmtContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(134);
				importStatement();
				}
				break;
			case 2:
				_localctx = new TypeDefStmtContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(135);
				typeDefinition();
				}
				break;
			case 3:
				_localctx = new VarDeclStmtContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(136);
				variableDeclaration();
				}
				break;
			case 4:
				_localctx = new FuncDefStmtContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(137);
				functionDefinition();
				}
				break;
			case 5:
				_localctx = new FuncInvokeStmtContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(138);
				functionInvocation();
				}
				break;
			case 6:
				_localctx = new IfStmtContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(139);
				ifStatement();
				}
				break;
			case 7:
				_localctx = new LoopStmtContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(140);
				loopStatement();
				}
				break;
			case 8:
				_localctx = new AssignStmtContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(141);
				assignmentStatement();
				}
				break;
			case 9:
				_localctx = new ComponentStmtContext(_localctx);
				enterOuterAlt(_localctx, 9);
				{
				setState(142);
				componentDefinition();
				}
				break;
			case 10:
				_localctx = new ServiceStmtContext(_localctx);
				enterOuterAlt(_localctx, 10);
				{
				setState(143);
				serviceDefinition();
				}
				break;
			case 11:
				_localctx = new ScopeStmtContext(_localctx);
				enterOuterAlt(_localctx, 11);
				{
				setState(144);
				scopeOfStatements();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
